# stock_analyser_with_ai

./: .gitignore  README.md  ai_insights_handler.py  company_info_handler.py  llm_config.py  pyproject.toml  stock_utility_handler.py  ui_app.py
agent/: company_info_agent.py  stock_analysis_agent.py
config/: llm_config.py
prompts/: analyst_prompt.py  company_info_prompt.py
tools/: search_av.py
